# human-reliability-program-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  constraints.md  docker-compose.dev.yml  docker-compose.yml  evals.md  intent.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
data/chroma/: chroma.sqlite3
scripts/: ingest_regulations.py
src/hrp_mcp/: __init__.py  audit.py  config.py  server.py
src/hrp_mcp/data/: __init__.py
src/hrp_mcp/data/ingest/: __init__.py  base.py  ecfr_ingest.py  handbook_ingest.py
src/hrp_mcp/models/: __init__.py  errors.py  hrp.py  regulations.py
src/hrp_mcp/rag/: __init__.py  chunking.py
src/hrp_mcp/resources/: __init__.py  reference_data.py
src/hrp_mcp/services/: __init__.py  embeddings.py  rag.py  vector_store.py
src/hrp_mcp/tools/: __init__.py  certification.py  medical.py  procedures.py  regulations.py  testing.py
tests/: __init__.py  conftest.py  test_audit.py  test_models.py
tests/test_data/: test_handbook_ingest.py  test_ingest.py
tests/test_rag/: __init__.py  test_chunking.py
tests/test_services/: __init__.py  test_embeddings.py  test_rag.py  test_reference_data.py  test_vector_store.py
tests/test_tools/: __init__.py  test_certification.py  test_medical.py  test_regulations.py
