[project]
name = "hrp-mcp"
version = "0.1.0"
description = "MCP server for DOE Human Reliability Program (10 CFR Part 712) - certification requirements, medical standards, and procedural guidance"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "HRP MCP Team" }
]
keywords = ["mcp", "hrp", "human-reliability-program", "doe", "nnsa", "10-cfr-712", "nuclear"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    # MCP Framework
    "fastmcp>=0.4.0",

    # Vector Store & Embeddings
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",

    # Data Models & Config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Async HTTP (for eCFR API)
    "httpx>=0.25.0",

    # XML parsing (eCFR)
    "lxml>=5.0.0",
    "defusedxml>=0.7.0",  # Secure XML parsing (prevents XXE attacks)

    # Token counting for chunking
    "tiktoken>=0.5.0",

    # PDF/HTML processing
    "docling>=2.0.0",
    "beautifulsoup4>=4.12.0",

    # Security: pin transitive dependencies to fix CVEs
    "urllib3>=2.6.3",
    "setuptools>=78.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1.0",
]

[project.scripts]
hrp-mcp = "hrp_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hrp_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",    # Line too long - many long strings in regulation descriptions
    "SIM105",  # contextlib.suppress - optional style preference
    "SIM108",  # Ternary operator - not always more readable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM102"]  # Nested if statements ok in tests for clarity

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
disallow_any_generics = false
ignore_missing_imports = true
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "hrp_mcp.data.ingest.*",
    "hrp_mcp.services.vector_store",
    "hrp_mcp.services.embeddings",
]
disable_error_code = ["arg-type", "return-value", "attr-defined", "assignment", "operator", "index", "var-annotated"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
