[project]
name = "hrp-mcp"
version = "0.1.0"
description = "MCP server for DOE Human Reliability Program (10 CFR Part 712) - certification requirements, medical standards, and procedural guidance"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Michael K Alber" }
]
keywords = ["mcp", "hrp", "human-reliability-program", "doe", "nnsa", "10-cfr-712", "nuclear"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    # MCP Framework
    "fastmcp>=0.4.0",

    # Vector Store & Embeddings
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",

    # Data Models & Config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Async HTTP (for eCFR API)
    "httpx>=0.25.0",

    # XML parsing (eCFR)
    "lxml>=5.0.0",
    "defusedxml>=0.7.0",  # Secure XML parsing (prevents XXE attacks)

    # Token counting for chunking
    "tiktoken>=0.5.0",

    # PDF/HTML processing
    "docling>=2.0.0",
    "beautifulsoup4>=4.12.0",

    # Security: pin transitive dependencies to fix CVEs
    "urllib3>=2.6.3",
    "setuptools>=78.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1.0",
    "bandit[toml]>=1.7.0",
    "pip-audit",
]

[project.scripts]
hrp-mcp = "hrp_mcp.server:main"

[project.urls]
Homepage = "https://github.com/michaelalber/human-reliability-program-mcp"
Repository = "https://github.com/michaelalber/human-reliability-program-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hrp_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # Line too long - regulation description strings
    "SIM105",  # contextlib.suppress - optional style preference
    "SIM108",  # Ternary operator - not always more readable
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests", ".venv"]
# Third-party libs without type stubs (chromadb, docling, sentence-transformers)
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "hrp_mcp.data.ingest.*",
    "hrp_mcp.services.vector_store",
    "hrp_mcp.services.embeddings",
]
# Data ingestion uses dynamic dicts; vector store has chromadb type issues
disable_error_code = ["arg-type", "return-value", "attr-defined", "assignment", "operator", "index", "var-annotated"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
markers = [
    "integration: integration tests requiring external services",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/hrp_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
